@@ -1,1 +1,30 @@
+plugins {
+    id 'application'
+}
+
 description = 'box2d-jni samples'
+
+dependencies {
+    implementation project(":modules:libraries:core")
+    implementation name: 'box2d-natives-linux_x64'
+}
+
+classes.dependsOn(':modules:libraries:core:build')
+
+Boolean enableNativeAccess = JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)
+
+tasks.withType(JavaExec).configureEach { // Java runtime options:
+    classpath sourceSets.test.runtimeClasspath
+    dependsOn('assemble')
+    enableAssertions = true
+    if (enableNativeAccess) {
+        jvmArgs('--enable-native-access=ALL-UNNAMED') // suppress System::load() warning
+    }
+}
+tasks.withType(Test).configureEach {
+    if (enableNativeAccess) {
+        jvmArgs('--enable-native-access=ALL-UNNAMED') // suppress System::load() warning
+    }
+    //testLogging.showStandardStreams = true
+}
+test.dependsOn('assemble')
